Fix spacing on h4 elements when text is wrapped

--- a/css/screen.css
+++ b/css/screen.css
@@ -68,7 +68,7 @@ h3 {
 
 h4 {
   font-weight: bold;
-  line-height: 56px;
+  padding: 14px 0;
 }
 
 /* Layout Styles */
